# GARVIS

./: .gitignore  404.html  AGENTS.md  ARC_SOLVER_README.md  BINARYBRAIN  CODE_OF_CONDUCT.md  CONSCIOUS-AWARENESS-DIRECTIVE.md  Dockerfile.gpu  Makefile  NOTICE-GARVIS  PRIME_CONSCIOUSNESS_README.md  README.md  Second_in_command.md  TEN_COMMANDMENTS.md  arc_prize_solver.py  golden_ratio_optimization.py  hypercube_integration.py  hypercube_network.py  index.html  knowledge_base.md  lattice_consciousness_framework.py  mkdocs.yml  prime_consciousness_integration.py  pulse.py  pyproject.toml  reasoning_chain.md  sitemap.xml  void_cascade_sync.py
.github/: ATLAS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  model_provider.md  question.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: docs.yml  issues.yml  publish.yml  tests.yml  update-docs.yml
ATTRACTOR_MEMORY_EXPERIMENT/: index.html
GARVIS_MEMORY_LIFECYCLE_DIRECTIVE/: index.html
GARVIS_PHONE_CAPABILITY_RESEARCH_DIRECTIVE/: index.html
GARVIS_STAGE_GATE_FOUNDATION/: index.html
GARVIS_STAGE_GATE_FOUNDATION_SPECIFICATION/: index.html
agents/: index.html
config/: ci_error_registry.json  garvis_anatomical_architecture.json  garvis_capabilities.json  garvis_core_memory.json  garvis_dream_field.json  garvis_internet_field.json  garvis_memory_lifecycle_directive.json  garvis_memory_policy.json  garvis_neurocognitive.json  garvis_phone_capabilities.json  index.html
context/: index.html
directives/: DIRECTIVE-010.md  DIRECTIVE_014_STATIC_ARC.md
docs/: ATTRACTOR_MEMORY_EXPERIMENT.md  DIRECTIVE_010_DECISION.md  GARVIS_MEMORY_LIFECYCLE_DIRECTIVE.md  GARVIS_PHONE_CAPABILITY_RESEARCH_DIRECTIVE.md  GARVIS_STAGE_GATE_FOUNDATION.md  GARVIS_STAGE_GATE_FOUNDATION_SPECIFICATION.md  arc-static-object-primitives.md  ci-error-registry.md  epistemic-filing-system.md  garvis-anatomical-software-plan.md  garvis-core-memory-protocol.md  garvis-economic-doctrine.md  garvis-internet-economy-field.md  garvis-memory-lifecycle.md  garvis-neurocognitive-heartbeat.md  garvis-option-b-permission-model.md  garvis_runtime.md  lattice_cycle_cli.md  local-language-runtime.md
docs/ja/: ATTRACTOR_MEMORY_EXPERIMENT.md  GARVIS_MEMORY_LIFECYCLE_DIRECTIVE.md  GARVIS_PHONE_CAPABILITY_RESEARCH_DIRECTIVE.md  GARVIS_STAGE_GATE_FOUNDATION.md  GARVIS_STAGE_GATE_FOUNDATION_SPECIFICATION.md  Identity_lattice.md  agents.md  config.md  context.md  examples.md  garvis-core-memory-protocol.md  garvis-memory-lifecycle.md  garvis-option-b-permission-model.md  garvis_runtime.md  guardrails.md  handoffs.md  index.md  lattice_cycle_cli.md  local-language-runtime.md  mcp.md  money_maker  multi_agent.md  quickstart.md  release.md  repl.md  results.md  running_agents.md  sessions.md  streaming.md  tools.md  tracing.md  usage.md  visualization.md
examples/: arc_solver_example.py  index.html
examples/lattice_cycle/: evidence.example.json
garvis-core-memory-protocol/: index.html
garvis-memory-lifecycle/: index.html
garvis-option-b-permission-model/: index.html
garvis_runtime/: index.html
guardrails/: index.html
handoffs/: index.html
hypercube_protocol/: __init__.py  binary_ops.py  connection_manager.py  core.py
ja/: Generate Auto API Integrations Lattice MD  index.html
ja/ATTRACTOR_MEMORY_EXPERIMENT/: index.html
ja/GARVIS_MEMORY_LIFECYCLE_DIRECTIVE/: index.html
ja/GARVIS_PHONE_CAPABILITY_RESEARCH_DIRECTIVE/: index.html
ja/GARVIS_STAGE_GATE_FOUNDATION/: index.html
ja/GARVIS_STAGE_GATE_FOUNDATION_SPECIFICATION/: index.html
ja/Identity_lattice/: index.html
ja/agents/: index.html
ja/config/: index.html
ja/context/: index.html
ja/examples/: index.html
ja/garvis-core-memory-protocol/: index.html
ja/garvis-memory-lifecycle/: index.html
ja/garvis-option-b-permission-model/: index.html
ja/garvis_runtime/: index.html
ja/guardrails/: index.html
ja/handoffs/: index.html
ja/lattice_cycle_cli/: index.html
ja/local-language-runtime/: index.html
ja/mcp/: index.html
ja/models/: index.html
ja/multi_agent/: index.html
ja/quickstart/: index.html
ja/ref/: index.html
ja/release/: index.html
ja/repl/: index.html
ja/results/: index.html
ja/running_agents/: index.html
ja/sessions/: index.html
ja/streaming/: index.html
ja/tools/: index.html
ja/tracing/: index.html
ja/usage/: index.html
ja/visualization/: index.html
lattice_cycle_cli/: index.html
local-language-runtime/: index.html
mcp/: index.html
models/: index.html
models/litellm/: index.html
multi_agent/: index.html
opencl/: CMakeLists.txt  README.md  agent_loop.c
opencl/kernels/: phi_propagate.cl
quickstart/: index.html
realtime/guide/: index.html
realtime/quickstart/: index.html
ref/: index.html
ref/agent/: index.html
ref/agent_output/: index.html
ref/computer/: index.html
ref/exceptions/: index.html
ref/function_schema/: index.html
ref/guardrail/: index.html
ref/handoffs/: index.html
ref/items/: index.html
ref/lifecycle/: index.html
ref/logger/: index.html
ref/memory/: index.html
ref/model_settings/: index.html
release/: index.html
repl/: index.html
results/: index.html
running_agents/: index.html
scripts/: garvis_anatomy_plan.py  garvis_local_chat.sh  garvis_local_prompt.py  garvis_neuro_chat.py  garvis_neuro_status.py  garvis_phone_scan.py  garvis_termux.sh  quarantine_neuro_echoes.py  run_garvis_revenue_research.sh  seed_garvis_anatomy.py
search/: search_index.json
sessions/: index.html
src/: nvidia_acceleration.py
streaming/: index.html
tests/: conftest.py  test_lattice_cycle_cli.py  test_stream_events.py  test_streaming_tool_call_arguments.py  test_strict_schema.py  test_tool_choice_reset.py  test_tool_converter.py  test_tool_use_behavior.py  test_trace_processor.py  test_tracing.py  test_tracing_errors.py  test_tracing_errors_streamed.py  test_usage.py  test_visualization.py  testing_processor.py
tools/: garvis_resilience.py  index.html
tracing/: index.html
usage/: index.html
visualization/: index.html
(+313 files in other folders)
